apps/base/homeassistant/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  labels:
    app: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
        - name: homeassistant
          image: homeassistant/home-assistant
          ports:
            - containerPort: 8123
          volumeMounts:
            - mountPath: "/config"
              name: homeassistant-persistent-storage
            - mountPath: "/config/configuration.yaml"
              subPath: "configuration.yaml"
              name: homeassistant-config
      volumes:
        - name: homeassistant-config
          secret:
            secretName: homeassistant-config
            defaultMode: 0777
        - name: homeassistant-persistent-storage
          persistentVolumeClaim:
            claimName: homeassistant
