apps/base/homeassistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  type: ClusterIP
  selector:
    app: homeassistant
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8123
